# uvic-csc-226

./: .gitignore  README.md
assignments/a1/: a1.tex
assignments/a1/C implementation/: CMakeLists.txt  batch  batch_runner.c  chaining.c  hash_tables.h  linear_probing.c  main.c  references.txt  thinking.txt
assignments/a1/Plotting/: package-lock.json  plotting.py  plotting2.py  plotting3.py  results.csv
assignments/a2/: a2.tex
assignments/a2/C-Implementation/: CMakeLists.txt  dijkstra.c  dijkstra.h  experiment.c  experiment.h  floyd_warshall_roy.c  floyd_warshall_roy.h  graph.c  graph.h  graph_generator.c  graph_generator.h  main.c  results.csv
assignments/a2/Plotting/: plot.py
exercises/: exercise11.tex  exercise2.tex  exercise3.tex  exercise4.tex  exercise5.tex  exercise6.tex  exercise7.tex  exercise8.tex  exercise9.tex
labs/lab2/: quicksort.py
labs/lab2/inputs/: ascending_15000.txt  ascending_7500.txt  descending_15000.txt  descending_50.txt  descending_5000.txt  descending_7500.txt  random_10000_1.txt  random_10000_2.txt  random_10000_3.txt  random_1000_1.txt  random_1000_2.txt  random_1000_3.txt  random_100_1.txt  random_100_2.txt  random_100_3.txt  random_10_1.txt  random_10_2.txt  random_10_3.txt  random_15000_1.txt  random_15000_2.txt  random_15000_3.txt  random_5000_1.txt  random_5000_2.txt  random_5000_3.txt  random_500_1.txt  random_500_2.txt  random_500_3.txt  random_50_1.txt  random_50_2.txt  random_50_3.txt  random_7500_1.txt  random_7500_2.txt  random_7500_3.txt  random_bad_10000_1.txt  random_bad_10000_10.txt  random_bad_10000_2.txt  (+69 more)
